test/classes/ferguson/generic-field/generic-field-record-not-inited.good
generic-field-record-not-inited.chpl:9: In function 'test1':
generic-field-record-not-inited.chpl:10: error: default initialization with type 'Wrapper(GenericRecord(int(64)))' is not yet supported
generic-field-record-not-inited.chpl:6: note: field 'f' is a generic value
generic-field-record-not-inited.chpl:6: note: consider separately declaring a type field for it or using a 'new' call
